# exercises

./: .gitignore  CMakeLists.txt  README.md  newfile.txt
aads/graham_scan/: CMakeLists.txt  convex_hull.h  main.cpp
aads/list_merge/: CMakeLists.txt  SinglyLinkedList.hpp  main.cpp
aads/tree_traverse/: CMakeLists.txt  bad.cpp  new.cpp
asm/: CMakeLists.txt
asm/simple_print/: CMakeLists.txt  main.cpp
cmake_project_template/class/: CMakeLists.txt  MyClass.cpp  MyClass.h  main.cpp
cmake_project_template/extended/: CMakeLists.txt
cmake_project_template/extended/app/: CMakeLists.txt
cmake_project_template/extended/lib/: CMakeLists.txt
cmake_project_template/simple/: CMakeLists.txt
cmake_project_template/threads/: CMakeLists.txt  main.cpp
interview/: CMakeLists.txt
interview/containers/: .gitignore  CMakeLists.txt
interview/containers/deque/: CMakeLists.txt  main.cpp
interview/containers/map/: CMakeLists.txt
interview/core/: CMakeLists.txt
interview/core/arithmetic_return_type/: CMakeLists.txt  main.cpp  type_name.hpp
interview/core/enum_class/: CMakeLists.txt  main.cpp
interview/core/fold_exprs/: CMakeLists.txt  fold_exprs.cpp
interview/core/parameter_pack/: CMakeLists.txt  parameter_pack.cpp
interview/core/string_literals/: CMakeLists.txt  main.cpp
interview/dynam_prog/: CMakeLists.txt
interview/dynam_prog/edit_distance/: CMakeLists.txt  edit_distance.hpp  main.cpp  test.hpp
interview/dynam_prog/long_incr_subseq/: CMakeLists.txt  longest_increasing_subsequence.hpp  main.cpp  test.hpp
interview/dynam_prog/long_subseq/: CMakeLists.txt  longest_subsequence.hpp  main.cpp
interview/dynam_prog/short_superseq/: CMakeLists.txt  main.cpp  shortest_supersequence.hpp
interview/exceptions/: .gitignore
interview/exceptions/basics/: CMakeLists.txt  main.cpp
interview/functions/: CMakeLists.txt
interview/functions/func_pointer/: CMakeLists.txt  func_pointer  func_pointer.cpp
interview/functions/inline_basics/: CMakeLists.txt  inline.h  lib.cpp  lib.h  main.cpp
interview/functions/sizeof_array/: CMakeLists.txt  main.cpp
interview/functions/std_function/: CMakeLists.txt  main.cpp
interview/inheritance/: .gitignore  CMakeLists.txt
interview/inheritance/basics/: CMakeLists.txt  main.cpp
interview/inheritance/pub_pro_pri/: CMakeLists.txt  pub_pro_pri.cpp
interview/inheritance/virtual/: A.hpp  B.hpp  C.hpp  CMakeLists.txt  virtual.cpp
interview/iterators/basics/: CMakeLists.txt  iterators.cpp
interview/lambdas/basics/: CMakeLists.txt  Capture.hpp  lambdas_basics.cpp
interview/linux/: .gitignore  CMakeLists.txt
interview/linux/fork/: CMakeLists.txt
interview/linux/shared_mem/: CMakeLists.txt  get.cpp  header.h  set.cpp
interview/memory/: CMakeLists.txt
interview/memory/placement_new/: CMakeLists.txt  main.cpp
interview/misc/: .gitignore  CMakeLists.txt
interview/misc/bit_fields/: CMakeLists.txt  char_int_std-string.cpp
interview/misc/empty_struct/: CMakeLists.txt  main.cpp
interview/misc/forward_decl_mem_corruption/: CMakeLists.txt  disassembled_binary  disassembled_binary_intel  main.cpp  main.s  main_filtered.s
interview/misc/macros/: CMakeLists.txt  concat.cpp  concat.i  main.cpp
interview/misc/shared_ptr_trick/: CMakeLists.txt  main.cpp
interview/misc/sizeofs/: CMakeLists.txt  main.cpp
interview/misc/static_vars_funcs/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  c.cpp  c.h  main.cpp
interview/misc/vec_uniq_ptr/: CMakeLists.txt  main.cpp
interview/pointers/: CMakeLists.txt  const.cpp
interview/pointers/consts/: CMakeLists.txt  const.cpp
interview/polymorphism/: .gitignore  CMakeLists.txt
interview/polymorphism/functions_overload/: CMakeLists.txt  auto_overload_resolution.hpp  functions_overload.cpp
interview/polymorphism/virtual/: A.hpp  B.hpp  C.hpp  CMakeLists.txt  D.hpp  F.hpp  G.hpp  OverrideFinal.hpp  virtual.cpp
interview/polymorphism/virtual_method_in_destructor/: CMakeLists.txt  main.cpp
interview/tasks/: CMakeLists.txt
interview/tasks/alice_52_cards/: CMakeLists.txt  main.cpp  tshev_solution.cpp
interview/tasks/collatz/: CMakeLists.txt  main.cpp  main_cache.cpp  main_readable.cpp
interview/tasks/complete_pangram/: CMakeLists.txt  main.cpp
interview/tasks/concat_to_num/: CMakeLists.txt  another.cpp  main.cpp
interview/tasks/is_rotation/: CMakeLists.txt  main.cpp
interview/tasks/linear_particles/: CMakeLists.txt  main.cpp
interview/tasks/longest_pali/: CMakeLists.txt  code.cpp  code.h  main.cpp
interview/tasks/next_pali/: CMakeLists.txt  main.cpp
interview/tasks/parse_int/: CMakeLists.txt  main.cpp
interview/tasks/shared_pointer/: CMakeLists.txt  main.cpp  shared_pointer.hpp
interview/tasks/simple_grep/: CMakeLists.txt  main.cpp
interview/tasks/various/: CMakeLists.txt  cache.cpp  equal_sum_halves.cpp  lines_intersection.cpp  maximize_by_2metrics.cpp  permute_to_42.cpp  sum_of_integral_parts.cpp
interview/templates/: .gitignore  CMakeLists.txt
interview/templates/basics/: CMakeLists.txt  templates_basics.cpp
interview/templates/class_has_member/: CMakeLists.txt  class_has_member.cpp  class_has_member_concept.cpp  class_has_member_type.cpp
interview/values/: .gitignore
multithreading/: CMakeLists.txt
multithreading/condition_variable/: CMakeLists.txt  queue_cond.cpp
multithreading/task_scheduler/: CMakeLists.txt  main.cpp  scheduler.hpp  task.hpp
multithreading/task_system/: CMakeLists.txt  main.cpp
snippets/ReadFileAsyncWinAPI/: CMakeLists.txt  ReadFileEx.cpp  ReadFileOverlapped.cpp  file.txt  file1.txt
snippets/type_name/: CMakeLists.txt
stepanov_a9/algorithms/: CMakeLists.txt  algorithms.h  bench.cpp  binary_counter.h  list_pool.h  main.cpp  max.h  min.h  min_element1_2.h
stepanov_a9/instrumented/: CMakeLists.txt
stepanov_a9/singleton/: CMakeLists.txt  test_singleton.cpp
stepanov_a9/swap_min_search/: CMakeLists.txt  algorithms.h  binary_counter.h  main.cpp  max.h  min.h  sort_two.h
tests/codingtest_13-09-2020/: CMakeLists.txt  main.cpp  one.cpp  one.h  two.cpp  two.h
tests/interview_03-07-2020/: CMakeLists.txt  helpers.hpp  main.cpp
(+90 files in other folders)
