add_subdirectory(alice_52_cards)
add_subdirectory(collatz)
add_subdirectory(complete_pangram)
add_subdirectory(concat_to_num)
add_subdirectory(is_rotation)
add_subdirectory(linear_particles)
add_subdirectory(longest_pali)
add_subdirectory(next_pali)
add_subdirectory(parse_int)
add_subdirectory(shared_pointer)
add_subdirectory(simple_grep)
add_subdirectory(various)
